--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<version>9.0.58</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 
 
 	</dependencies>
